# PINN

./: PINN_EPI_CODEX_SPEC_H350_W200_POC.md  README.md  SPEC.md  pyproject.toml
configs/: default.yaml
data/: README.md
docs/: rollout_physics_loss_implementation_report.md
scripts/: evaluate_holdout.py  inspect_xlsx.py  plot_rollout_contours.py  plot_training_losses.py  predict_train_range.py  preprocess_data.py  run_rollout.py  train_deposition.py  train_etch.py
src/epi_pinn/: __init__.py  baseline.py  config.py  contour.py  evaluate.py  excel_io.py  geometry.py  losses.py  pipeline.py  preprocess.py  rollout.py  sampling.py  sdf.py  train.py  training_plots.py  units.py  visualize.py
src/epi_pinn/models/: __init__.py  conditional_levelset_pinn.py  contour_encoder.py
tests/: test_curvature_velocity.py  test_evaluate_metrics.py  test_training_plots.py
